...
    }
    
    /// Generates the error view with the given error message.
    
    @ViewBuilder
    private func errorView(error: AppError) -> some View {
        ErrorView(error: error, retryAction: viewModel.retryAction)
    }
    
}

#Preview {
    PostDetailsView(
        viewModel: .init(post: Post(userId: 1, id: 1, title: "Sample Post", body: "This is a sample post.", isFavorite: false))
    )
    .previewLayout(.sizeThatFits)
    .padding()
}

