...
    },
    "delete_button_title" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Delete"
          }
        }
      }
    },
    "delete_label" : {
      "localizations" : {
...
